objects/SRP_Recommendation_Form__c.object
<CustomObject><fields>
        <fullName>Evidence_and_Rationale__c</fullName>
        <label>Evidence and Rationale</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Panel_s_Recommendation__c</fullName>
        <label>Panel’s Recommendation</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Recommendation_Meeting_Date__c</fullName>
        <label>Recommendation Meeting Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>SRP_Recommendation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Review</label>
        <referenceTo>Document_Review__c</referenceTo>
        <relationshipLabel>SRP Recommendation Form</relationshipLabel>
        <relationshipName>SRP_Recommendation_Form</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>School_code_District_code__c</fullName>
        <label>School/code &amp; District/code</label>
        <length>225</length>
        <type>Text</type>
    </fields><fields>
        <fullName>State_Review_Panelists__c</fullName>
        <label>State Review Panelists</label>
        <length>225</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>SRP Recommendation Form</label><nameField>
        <label>SRP Recommendation Form N</label>
        <type>Text</type>
    </nameField><pluralLabel>SRP Recommendation Form</pluralLabel><sharingModel>Private</sharingModel></CustomObject>